# wi

./: WALLE_vs_DEXter_2Pager.pptx  dexter_vs_walle_report.xlsx  pyproject.toml  vitals.yaml
data/checkpoints/: tmp01q_h59f_l123_checkpoint.csv  tmpcbucoe03_l123_checkpoint.csv  tmpui65sfgf_l123_checkpoint.csv
data/output/: classified_incidents_20260123_182517.csv
docs/: README.md
docs/design/: l123_l4_taxonomy_enforcement_remediation_and_evaluation.md
insights/: __init__.py  __main__.py  classified_incidents_20260327_112205.csv  cli.py
insights/classifiers/: __init__.py  base.py  l123_classifier.py  l4_classifier.py
insights/config/: __init__.py  settings.py
insights/models/: __init__.py  schemas.py  taxonomy.py
insights/pipeline/: __init__.py  finalize.py  runner.py
insights/utils/: __init__.py  auth.py  data_loader.py  database.py  l123_audit_logging.py  l4_null_logging.py  metrics.py  progress.py  rate_limiter.py  s3.py  snowflake.py
scripts/: dexter_vs_walle_metrics.py  join_dexter_with_walle_snowflake.py  process_incidents_since_july_2025.py
validation/: __init__.py  aliases.json  audit_reasons.py  taxonomy_validator.py
workflows/: README.md  walle-dexter-join.yaml  walle-finalize.yaml  walle-l123.yaml  walle-l4.yaml  walle-l4only.yaml  walle-main.yaml  walle-prepare.yaml
